--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "nodemon --config nodemon.json src/server.ts",
     "db-migrate-dev": "prisma migrate dev",
-    "start-dev": "prisma migrate dev && nodemon --watch src/ --exec ts-node src/main.server.ts -e ts",
+    "start-dev": "prisma migrate dev && nodemon --watch src/ --exec ts-node src/server.ts -e ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,7 +18,8 @@
   "dependencies": {
     "@prisma/client": "^5.16.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "joi": "^17.13.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
