--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start-dev": "prisma migrate dev && nodemon --watch src/ --exec ts-node src/server.ts -e ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "cypress:open": "NODE_ENV=test && cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "seed": "ts-node prisma/seed/seed.ts"
   },
   "keywords": [],
   "author": "Luiz Felipe Xavier Farias",
